--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,27 @@ _site/
 # counterproductive to check this file into the repository.
 # Details at https://github.com/github/pages-gem/issues/768
 Gemfile.lock
+
+# Loggar
+*.log
+
+# Node modules
+node_modules/
+
+# Byggmappar
+dist/
+.vite/
+
+# Konfigurationsfiler
+.env*
+*.local
+
+# IDE-specifika filer
+.idea/
+*.sublime-workspace
+*.sublime-project
+.vscode/
+
+# NPM-cache
+npm-debug.log*
+yarn-error.log*
