Add TypeScript definitions for luxon and update typeRoots in tsconfig

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -22,7 +22,11 @@
     "noUnusedParameters": true,
     "erasableSyntaxOnly": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "noUncheckedSideEffectImports": true,
+    "typeRoots": [
+      "./node_modules/@types",
+      "./@types"  // Include your custom types here
+    ]
   },
   "include": ["src"]
 }
